# Bitfinex-trading-system

./: CMakeLists.txt  README.md
include/: api.hpp  thread_safe_queue.hpp  utils.hpp  websocket_server.hpp
src/: api.cpp  main.cpp  utils.cpp  websocket_server.cpp
